--- a/turist-activities/tourist-activities/src/css/index.css
+++ b/turist-activities/tourist-activities/src/css/index.css
@@ -1,16 +1,22 @@
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+  --btn-bg: linear-gradient(135deg, #d08a79, #f0d6c3);
+  --btn-text-color: #fff;
+  --btn-font: 'Poppins', sans-serif;
+  --btn-padding: 12px 24px;
+  --btn-border-radius: 44px;
+  --btn-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
+  --btn-hover-bg: linear-gradient(135deg, #feb47b, #ff7e5f);
+  --btn-hover-shadow: 0 6px 14px rgba(0,0,0, 0.2);
+  --btn-transition: all 0.3s ease-in-out;
+}
+
+.Root{
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 * {
@@ -27,8 +33,8 @@ a {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  justify-content: center;
-  align-items: center;
+  background-color: azure;
+  
 }
 
 /* HOME */
@@ -46,14 +52,43 @@ a {
 }
 
 .Home-link {
-  color: aliceblue;
-  padding: 15px;
-  background-color: rgba(157, 173, 187, 0.24);
+  background: var(--btn-bg);
+  display: inline-block;
+  color: var(--btn-text-color);
+  padding: var(--btn-padding);
   border: 1px solid black;
-  border-radius: 20px;
-  transition: background-color 0.4s ease-in-out;
+  border-radius: var(--btn-border-radius);
+  box-shadow: var(--btn-shadow);
+  transition: background-color 0.4s ease-in-out, box-shadow 1s ease-in-out, transform 1s ease-in-out;
 }
 
 .Home-link:hover{
-  background-color: #242424;
+  background: var(--btn-hover-bg);
+  box-shadow: var(--btn-hover-shadow);
+  transform: translateY(-10px);
+}
+
+/* HEADER */
+
+.Header{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 20vh;
+  position: sticky;
+  top: 0;
+  z-index: 20px;
+  width: 100%;
+
+}
+
+/* SECCIONES */
+
+.Main{
+  width: 100%;
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
 }
