--- a/turist-activities/tourist-activities/src/css/index.css
+++ b/turist-activities/tourist-activities/src/css/index.css
@@ -1,7 +1,5 @@
 :root {
 
-
-
   --btn-bg: linear-gradient(135deg, #d08a79, #f0d6c3);
   --btn-text-color: #fff;
   --btn-font: 'Poppins', sans-serif;
@@ -9,11 +7,11 @@
   --btn-border-radius: 12px;
   --btn-shadow: 0 0px 10px rgba(0, 0, 0, 0.7);
   --btn-hover-bg: linear-gradient(135deg, #feb47b, #ff7e5f);
-  --btn-hover-shadow: 0 6px 14px rgba(0,0,0, 0.8);
+  --btn-hover-shadow: 0 6px 14px rgba(0, 0, 0, 0.8);
   --btn-transition: all 0.3s ease-in-out;
 }
 
-.Root{
+.Root {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
@@ -34,12 +32,12 @@ a {
   flex-direction: column;
   min-height: 100vh;
   background-color: azure;
-  
+
 }
 
 /* HOME */
 .Home {
-  height: 100vh;
+  flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -61,7 +59,7 @@ a {
   transition: background-color 0.4s ease-in-out, box-shadow 1s ease-in-out, transform 1s ease-in-out;
 }
 
-.Home-link:hover{
+.Home-link:hover {
   background: var(--btn-hover-bg);
   box-shadow: var(--btn-hover-shadow);
   transform: translateY(-10px);
@@ -69,7 +67,7 @@ a {
 
 /* SECCIONES */
 
-.Main{
+.Main {
   width: 100%;
   flex: 1;
   display: flex;
