--- a/turist-activities/tourist-activities/src/css/pages/welcomePage.css
+++ b/turist-activities/tourist-activities/src/css/pages/welcomePage.css
@@ -6,14 +6,23 @@
     
 }
 
-.WelcomePage-content{
+.WelcomePage-div{
     height: 40vh;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
     align-items: center;
+
     border-radius: 50px 50px 0 0 ;
-    background-color: white;
+    background: var(--color-bg);
+}
+.WelcomePage-content{
+    height: 100%;
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+
 }
 
 .foto{
