--- a/turist-activities/tourist-activities/src/css/index.css
+++ b/turist-activities/tourist-activities/src/css/index.css
@@ -3,7 +3,7 @@
   --btn-bg: linear-gradient(135deg, #d08a79, #f0d6c3);
   --btn-text-color: #fff;
   --btn-font: 'Poppins', sans-serif;
-  --color-bg: linear-gradient(0deg, #E6F0F1, #fff);
+  --color-bg: linear-gradient(0deg, #ddf1f3, #fff);
   --btn-padding: 12px 24px;
   --btn-border-radius: 12px;
   --btn-shadow: 0 0px 10px rgba(0, 0, 0, 0.7);
@@ -32,8 +32,6 @@ a {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  background-color: rgb(255, 192, 97);
-
 }
 
 /* HOME */
@@ -75,4 +73,12 @@ a {
   align-items: center;
   justify-content: center;
 
+}
+
+.OutletWrapper{
+  max-height: 100vh;
+  flex: 1;
+  background: var(--color-bg);
+  display: flex;
+  flex-direction: column;
 }
