--- a/turist-activities/tourist-activities/src/css/pages/welcomePage.css
+++ b/turist-activities/tourist-activities/src/css/pages/welcomePage.css
@@ -32,3 +32,9 @@
     transform: translate(-50%, -50%);
 }
 
+.WelcomePage-line{
+    border: 4px solid black;
+    width: 40px;
+    border-radius: 40px;
+}
+
