--- a/turist-activities/tourist-activities/src/css/components/header.css
+++ b/turist-activities/tourist-activities/src/css/components/header.css
@@ -6,7 +6,7 @@
     justify-content: space-around;
     align-items: center;
     height: 10vh;
-    position: sticky;
+    /* position: sticky; */
     top: 0;
     z-index: 20px;
     width: 100%;
