--- a/turist-activities/tourist-activities/src/css/pages/home.css
+++ b/turist-activities/tourist-activities/src/css/pages/home.css
@@ -1,5 +1,5 @@
 .Home{
-    width: 100%;
+    min-width: 100%;
     max-width: 100vw;
     /* overflow-x: auto ; */
     display: flex;
@@ -13,6 +13,10 @@
 
 }
 
+.Act-h2,.Act-p{
+padding: 5px 20px;
+}
+
 .Act-cardScroll{
     display: flex;
     overflow-x: auto;
@@ -23,22 +27,54 @@
     scrollbar-width: none;
     max-width: 100vw;
     box-sizing: border-box;
+    padding: 1.5rem;
+    transform: skewY(-0.1deg);
+
 }
 
 .Act-card{
-    min-width: 300px;
-    height: 140px;
+    min-width: 250px;
+    height: 210px;
     padding: 1rem;
-    background-color: aquamarine;
-    border-radius: 20px;
+    /* border-radius: 30px; */
+    border-radius: 67px 55px 33px 40px;
+    transform: rotate(-0.5deg);
     flex-shrink: 0;
+    color: white;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+.Act-card.orange{
+    background: linear-gradient(135deg, #ff9941, #f0d6bf);
+    box-shadow: 0px 10px 20px hsla(28, 76%, 82%, 0.6);
+
+
 }
 
+.Act-card.blue{
+    background: linear-gradient(135deg, #3bdae3, #c8f2f4);
+    box-shadow: 0px 10px 20px hsla(183, 63%, 78%, 0.4);
 
+}
 
-
-
-
-
+.Act-card.yellow{
+    background: linear-gradient(135deg, #fddc4b, #f3ebca);
+    box-shadow: 0px 10px 20px hsla(49, 69%, 80%, 0.4);
+}
 
 /* Act pendientes */
+
+.Pending{
+    gap: 20px;
+}
+
+.Pending-act{
+    display: flex;
+    background-color: #fff;
+    border-radius: 20px;
+    padding: 1rem;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    margin: 20px 0;
+}
