--- a/turist-activities/tourist-activities/src/css/components/footer.css
+++ b/turist-activities/tourist-activities/src/css/components/footer.css
@@ -40,11 +40,12 @@
 }
 
 .Footer-div {
+    color: white;
     position: absolute;
     top: -10px;
     left: 50%;
     padding: 20px;
-    background-color: aliceblue;
+    background: linear-gradient(135deg, #ff9941, #f0d6bf);
     border-radius: 50%;
     width: 60px;
     height: 60px;
@@ -53,6 +54,8 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    box-shadow: 0 10px 8px rgba(183, 144, 83, 0.5);
+
 }
 
 /* MOTION con los DOTS */
@@ -80,6 +83,7 @@
     background: radial-gradient(circle at 30% 30%, #edebea, #e81663);
     animation: spin 3s linear infinite;
 }
+
 
 /* keyframe para darle css a las bolitas del nav del footer */
 @keyframes spin {
