--- a/turist-activities/tourist-activities/src/css/pages/welcomePage.css
+++ b/turist-activities/tourist-activities/src/css/pages/welcomePage.css
@@ -1,21 +1,24 @@
-.WelcomePage{
+.WelcomePage {
     height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: end;
-    
+    background-color: rgb(229, 234, 161);
+
 }
 
-.WelcomePage-div{
+.WelcomePage-div {
     height: 40vh;
     display: flex;
     flex-direction: column;
     align-items: center;
 
-    border-radius: 50px 50px 0 0 ;
+    border-radius: 50px 50px 0 0;
     background: var(--color-bg);
+    /* background-color: rgb(227, 109, 109); */
 }
-.WelcomePage-content{
+
+.WelcomePage-content {
     height: 100%;
     width: 90%;
     display: flex;
@@ -25,16 +28,37 @@
 
 }
 
-.foto{
+.foto {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
 
-.WelcomePage-line{
-    border: 4px solid black;
+.WelcomePage-line {
+    border: 4px solid #24b7bf;
     width: 40px;
     border-radius: 40px;
 }
 
+.WelcomePage-title{
+color: black;
+}
+
+.WelcomePage-subtitle{
+    font-size: 1.2rem;
+    color: rgb(112, 115, 115);
+}
+
+.WelcomePage-link {
+    font-size: 1.5rem;
+    color: white;
+    padding: 20px;
+    background: linear-gradient(135deg, #3bdae3, #c8f2f4);
+    border-radius: 50%;
+    width: 80px;
+    height: 80px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
