--- a/turist-activities/tourist-activities/src/css/pages/home.css
+++ b/turist-activities/tourist-activities/src/css/pages/home.css
@@ -1,4 +1,4 @@
-.Home{
+.Home {
     min-width: 100%;
     max-width: 100vw;
     /* overflow-x: auto ; */
@@ -8,22 +8,24 @@
 
 /* Packs recomendadoss */
 
-.Act-section{
+.Act-section {
     margin-bottom: 20px;
 
 }
 
-.Act-h2,.Act-p{
-padding: 5px 20px;
+.Act-h2,
+.Act-p {
+    padding: 5px 20px;
 }
 
-.Act-cardScroll{
+.Act-cardScroll {
     display: flex;
     overflow-x: auto;
     /* -webkit-overflow-scrolling: touch; para safari y iOS smooth scroll */
     gap: 20px;
     padding-left: 1rem;
-    scroll-behavior: smooth; /*suavidad al scroll */
+    scroll-behavior: smooth;
+    /*suavidad al scroll */
     scrollbar-width: none;
     max-width: 100vw;
     box-sizing: border-box;
@@ -32,7 +34,7 @@ padding: 5px 20px;
 
 }
 
-.Act-card{
+.Act-card {
     min-width: 250px;
     height: 210px;
     padding: 1rem;
@@ -46,31 +48,32 @@ padding: 5px 20px;
     flex-direction: column;
     justify-content: space-around;
 }
-.Act-card.orange{
+
+.Act-card.orange {
     background: linear-gradient(135deg, #ff9941, #f0d6bf);
     box-shadow: 0px 10px 20px hsla(28, 76%, 82%, 0.6);
 
 
 }
 
-.Act-card.blue{
+.Act-card.blue {
     background: linear-gradient(135deg, #3bdae3, #c8f2f4);
     box-shadow: 0px 10px 20px hsla(183, 63%, 78%, 0.4);
 
 }
 
-.Act-card.yellow{
+.Act-card.yellow {
     background: linear-gradient(135deg, #fddc4b, #f3ebca);
     box-shadow: 0px 10px 20px hsla(49, 69%, 80%, 0.4);
 }
 
 /* Act pendientes */
 
-.Pending{
+.Pending {
     gap: 20px;
 }
 
-.Pending-act{
+.Pending-act {
     display: flex;
     align-items: start;
     justify-content: space-around;
@@ -81,19 +84,41 @@ padding: 5px 20px;
     margin: 20px 0;
 }
 
-.ActPending{
+.ActPending {
     padding: 15px 15px 0px 15px;
 }
 
-.Pending-links{
+.Pending-links {
     display: flex;
     /* gap: 10px; */
     justify-content: space-around;
 }
 
-.Pending-link{
+.Pending-link {
     padding: 8px;
     background-color: #f0d6bf;
-    border-radius:15px ;
+    border-radius: 15px;
     color: gray;
+    transition: opacity 0.6s ease-in-out, color 0.6s ease-in-out;
+}
+
+.Pending-link--violet {
+    padding: 8px;
+    border-radius: 15px;
+    color: rgb(255, 255, 255);
+    background-color: #9468f3;
+    transition: opacity 0.6s ease-in-out, color 0.6s ease-in-out;
+
+}
+
+.Pending-link:hover,
+.Pending-link--violet:hover {
+    opacity: 0.8;
+    color: rgb(41, 38, 38);
+}
+
+.Pending-link:active,
+.Pending-link--violet:active {
+    opacity: 0.7;
+    color: rgb(0, 0, 0);
 }
