--- a/turist-activities/tourist-activities/src/css/pages/calendar.css
+++ b/turist-activities/tourist-activities/src/css/pages/calendar.css
@@ -41,8 +41,7 @@
 
 .CalendarioHoras-0,
 .CalendarioHoras-11 {
-    color: blue;
-}
+background-color: rgb(196, 243, 162);}
 
 .CalendarioHoras-1,
 .CalendarioHoras-13 {
