--- a/turist-activities/tourist-activities/src/css/pages/calendar.css
+++ b/turist-activities/tourist-activities/src/css/pages/calendar.css
@@ -1,5 +1,13 @@
 .Slider{
     display: flex;
+    overflow-x: auto;
+    gap: 0.2rem;
+    padding: 1rem;
+    scroll-snap-type: x mandatory;
+    width: 100%;
+    max-width: 100vw;
+    scrollbar-width: none;
+    scroll-behavior: smooth;
 }
 
 .Selected-day {
@@ -8,6 +16,7 @@
 }
 
 .Slider-btn{
+    scroll-snap-align: center; /* hace que busque un slider-btn para centrarse y asi da la sensacion de suavidad.. o de que va buscando un dia  */
     padding: 0.8rem;
     border-radius: 20px;
     height: 60px;
