--- a/turist-activities/tourist-activities/src/css/index.css
+++ b/turist-activities/tourist-activities/src/css/index.css
@@ -3,7 +3,7 @@
   --btn-bg: linear-gradient(135deg, #d08a79, #f0d6c3);
   --btn-text-color: #fff;
   --btn-font: 'Poppins', sans-serif;
-  --color-bg: linear-gradient(0deg, #ddf1f3, #fff);
+  --color-bg: linear-gradient(0deg, #68bedb8e, #d4e4ef00);
   --btn-padding: 12px 24px;
   --btn-border-radius: 12px;
   --btn-shadow: 0 0px 10px rgba(0, 0, 0, 0.7);
