--- a/turist-activities/tourist-activities/src/css/components/footer.css
+++ b/turist-activities/tourist-activities/src/css/components/footer.css
@@ -32,21 +32,28 @@
 .Footer-link {
     text-decoration: none;
     color: black;
+    opacity: 0.6;
+    transition: opacity 0.5s ease-in-out;
 }
 
 
 .Footer-link.active {
-    color: brown;
+    opacity: 1;
+    
 }
+/* .Footer-link.hover {
+    opacity: 1;
+    
+} */
 
 .Footer-imgLink{
     width: 25px;
-    transition: opacity 0.5s ease-in-out;
 }
 
-.Footer-imgLink:hover{
-    opacity: 0.5;
-}
+
+
+
+
 
 .Footer-div {
     color: white;
