--- a/turist-activities/tourist-activities/src/css/pages/home.css
+++ b/turist-activities/tourist-activities/src/css/pages/home.css
@@ -4,6 +4,7 @@
     /* overflow-x: auto ; */
     display: flex;
     flex-direction: column;
+    position: relative;
 }
 
 /* Packs recomendadoss */
@@ -40,7 +41,105 @@
 }
 .Pack-icono{
     width: 60px;
+}
+/* LIGHTBOX PACKS */
 
+.Pack-overlay{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: 30;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(200, 242, 244, 0.729);
+    backdrop-filter: blur(3px);
+    padding: 1rem;
+}
+.Pack-cerrar{
+    position: absolute;
+    top:1rem;
+    right:1rem;
+    z-index: 31;
+    font-size: 1.5rem;
+    background-color: #fff;
+    border: none;
+    border-radius: 50%;
+    width: 2.5rem;
+    height: 2.5rem;
+    cursor: pointer;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #333;
+    transition: background-color 1s ease-in-out;
+}
+.Pack-cerrar:hover{
+    background-color: #f0f0f0;
+}
+.Pack-detalles{
+    background-color: rgb(255, 255, 255);
+    border-radius: 1.5rem;
+    display: flex;
+    flex-direction: column;
+    padding: 0.8rem;
+    width: 90%;
+    max-width: 700px;
+    max-height: 90vh;
+    box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    
+}
+/* actividades */
+.Pack-activity{
+    height: 120px;
+    background-color: #f8f9fa;
+    border-radius: 1rem;
+    padding: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 0.4rem;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.5);
+}
+
+.Activity{
+    width: 220px;
+    /* flex: 1; */
+}
+
+.Activity-h3{
+    font-size: 1.1rem;
+    color: #333;
+}
+.Activity-p{
+    margin-top: 0.3rem;
+    font-size: 1rem;
+    color: #666;
+}
+
+/* botones */
+.Activity-link{
+background-color: #4ad3da;
+color: #fff;
+border: none;
+border-radius: 1rem;
+padding: 0.5rem 1rem;
+cursor: pointer;
+font-size: 1rem;
+width: 7rem;
+height: auto;
+transition: background-color 0.5s ease-in-out;
+}
+
+.Activity-link:hover{
+    background-color: #0099a1;
 }
 
 .Act-card {
@@ -115,6 +214,7 @@
 
 
 .Activities-act {
+    position: relative;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -128,48 +228,9 @@
     height: 150px;
 }
 .Activities-img{
-    
+    position: absolute;
+    top: 0.8rem;
+    left: 0.8rem;
     width: 40px;
 }
 
-.ActActivities {
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
-    padding: 8px 8px 0px 8px;
-}
-
-.Activities-links {
-    display: flex;
-    /* gap: 10px; */
-    justify-content: space-around;
-}
-
-.Activities-link {
-    padding: 8px;
-    background-color: #d3823b;
-    border-radius: 15px;
-    color: rgb(39, 38, 38);
-    transition: opacity 0.6s ease-in-out, color 0.6s ease-in-out;
-}
-
-.Activities-link--violet {
-    padding: 8px;
-    border-radius: 15px;
-    color: rgb(255, 255, 255);
-    background-color: #9468f3;
-    transition: opacity 0.6s ease-in-out, color 0.6s ease-in-out;
-
-}
-
-.Activities-link:hover,
-.Activities-link--violet:hover {
-    opacity: 0.8;
-    color: rgb(41, 38, 38);
-}
-
-.Activities-link:active,
-.Activities-link--violet:active {
-    opacity: 0.7;
-    color: rgb(0, 0, 0);
-}
