--- a/front-tourist-activities/src/css/pages/home.css
+++ b/front-tourist-activities/src/css/pages/home.css
@@ -81,6 +81,13 @@
 .Pack-cerrar:hover{
     background-color: #f0f0f0;
 }
+
+.Pack-header{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
 .Pack-detalles{
     background-color: rgb(255, 255, 255);
     border-radius: 1.5rem;
