--- a/front-tourist-activities/src/css/pages/home.css
+++ b/front-tourist-activities/src/css/pages/home.css
@@ -178,11 +178,11 @@ transition: background-color 0.5s ease-in-out;
 }
 
 .Act-card.blue {
-    background: linear-gradient(135deg, #3bdae3, #8becf1);
+    background: linear-gradient(135deg, #3bdae3, #95e5ea);
     box-shadow: 0px 10px 20px hsla(183, 63%, 78%, 0.4);
 }
 .Pack-detalles.blue{
-    background-color: #8becf1;
+    background-color: #95e5ea;
 }
 
 .Act-card.yellow {
