--- a/front-tourist-activities/src/css/pages/calendar.css
+++ b/front-tourist-activities/src/css/pages/calendar.css
@@ -80,7 +80,7 @@
     display: flex;
     flex-direction: column;
     margin-bottom: 12px;
-    border-bottom: 0.2px solid black;
+    border-bottom: 0.2px solid rgb(201, 197, 197);
 }
 
 .BloqueHoras-h4{
