--- a/front-tourist-activities/src/css/pages/profile.css
+++ b/front-tourist-activities/src/css/pages/profile.css
@@ -6,17 +6,30 @@
     align-items: center;
     padding: 2rem;
     max-height: 100vh;
-    background-color: #f4f6f8;
+    /* background-color: #f4f6f8; */
+}
+
+.Profile-bg {
+    z-index: -1;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 .Profile-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
     background-color: #fff;
     padding: 2rem;
     border-radius: 24px;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.08);
     width: 100%;
     max-width: 420px;
-    height: 620px;
+    height: 580px;
 }
 
 .Profile-title {
@@ -29,10 +42,31 @@
 .Profile-form {
     display: flex;
     flex-direction: column;
+}
+
+.Profile-nav {
+    width: 100%;
+    background: none;
+    border: none;
+    cursor: pointer;
+    display: flex;
+    justify-content: flex-start; 
 
 }
 
+.Profile-link {
+    display: flex;
+    border: 1.4px solid #ccc;
+    justify-content: center;
+    align-items: center;
+    border-radius: 8px;
+    padding: 0.4rem;
+    width: 32px;
+}
+
 .Profile-label {
+    display: flex;
+    flex-direction: column;
     color: #555;
     margin-bottom: 0.3rem;
 }
@@ -50,7 +84,7 @@
 
 .Profile-button {
     padding: 0.8rem 1rem;
-    border-color: #5b9df9;
+    background-color: #5b9df9;
     color: white;
     border: none;
     border-radius: 0.75rem;
