--- a/front-tourist-activities/src/css/pages/welcomePage.css
+++ b/front-tourist-activities/src/css/pages/welcomePage.css
@@ -9,6 +9,7 @@
 .WelcomePage-fondo{
     height: 100vh;
     aspect-ratio: 16/9;
+    object-fit: cover;
 }
 .WelcomePage-div {
     position: absolute;
