--- a/front-tourist-activities/src/css/pages/calendar.css
+++ b/front-tourist-activities/src/css/pages/calendar.css
@@ -1,13 +1,13 @@
-.CalendarHeader{
+.CalendarHeader {
     display: flex;
     justify-content: space-between;
     width: 90%;
 }
 
-.CalendarHeader-btn{
+.CalendarHeader-btn {
     cursor: pointer;
     width: 60px;
-    height: 60px; 
+    height: 60px;
     padding: 1rem;
     border-radius: 50%;
     background-color: rgb(228, 228, 23);
@@ -18,12 +18,12 @@
     align-items: center;
 }
 
-.CalendarHeader-btnImg{
+.CalendarHeader-btnImg {
     width: 28px;
-    height: 28px; 
+    height: 28px;
 }
 
-.Slider{
+.Slider {
     display: flex;
     overflow-x: auto;
     gap: 0.2rem;
@@ -35,8 +35,9 @@
     scroll-behavior: smooth;
 }
 
-.Slider-btn{
-    scroll-snap-align: center; /* hace que busque un slider-btn para centrarse y asi da la sensacion de suavidad.. o de que va buscando un dia  */
+.Slider-btn {
+    scroll-snap-align: center;
+    /* hace que busque un slider-btn para centrarse y asi da la sensacion de suavidad.. o de que va buscando un dia  */
     padding: 0.8rem;
     border-radius: 20px;
     height: 60px;
@@ -47,22 +48,24 @@
     align-items: center;
     justify-content: center;
     cursor: pointer;
-    
+
 }
+
 .Selected-day {
     color: rgb(221, 221, 221);
     font-weight: 700;
     background-color: blueviolet;
 }
 
-.Slider-btn:hover{
+.Slider-btn:hover {
     background-color: rgb(148, 148, 202);
 }
 
 
 /* Bloque de horas y actividades */
 
-.Actividades{
+.Actividades {
+    /* position: relative; */
     background-color: #fff;
     width: 90%;
     padding: 20px;
@@ -70,12 +73,13 @@
     box-shadow: 0 8px 24px rgba(0, 0, 0, 0.2);
 }
 
-.Actividades-h3{
+.Actividades-h3 {
     font-size: 1.25rem;
     margin-bottom: 16px;
     color: #333;
     font-weight: 700;
 }
+
 .BloqueHoras {
     display: flex;
     flex-direction: column;
@@ -83,7 +87,7 @@
     border-bottom: 0.2px solid rgb(201, 197, 197);
 }
 
-.BloqueHoras-h4{
+.BloqueHoras-h4 {
     font-size: 0.9rem;
 }
 
@@ -107,32 +111,39 @@
     justify-content: center;
 }
 
-.actividad-futura{
+.actividad-futura {
     background-color: var(--color-act-futura);
 }
-.actividad-pronto{
+
+.actividad-pronto {
     background-color: var(--color-act-pronto);
 }
-.actividad-pasada{
+
+.actividad-pasada {
     background-color: var(--color-act-pasada);
 }
 
 /* FORM del calendario */
 
-.CalendarForm{
+.CalendarForm {
     /* position: absolute; */
+    margin: 20px auto;
+    bottom: 0;
+    left: 0;
     display: flex;
     flex-direction: column;
-    gap: 1rem;    
+    gap: 1rem;
     background-color: rgba(255, 255, 255, 0.4);
-    backdrop-filter: blur(10px); /*defenfoque a lo q hay detras del background color  de este elemnto */
+    backdrop-filter: blur(10px);
+    /*defenfoque a lo q hay detras del background color  de este elemnto */
     border-radius: 20px;
     padding: 2rem;
     max-width: 550px;
-    margin: 0 auto;
 }
 
-.CalendarForm-input,.CalendarForm-textarea,.CalendarForm-select{
+.CalendarForm-input,
+.CalendarForm-textarea,
+.CalendarForm-select {
     border: none;
     border-radius: 14px;
     padding: 0.8rem 1rem;
@@ -140,7 +151,7 @@
 }
 
 
-.CalendarForm-btn{
+.CalendarForm-btn {
     padding: 0.8rem;
     font-weight: 600;
     border: none;
