--- a/front-tourist-activities/src/css/pages/welcomePage.css
+++ b/front-tourist-activities/src/css/pages/welcomePage.css
@@ -44,13 +44,14 @@
 } */
 
 .WelcomePage-line {
-    border: 4px solid #24b7bf;
+    border: 4px solid #74e0e6;
     width: 40px;
     border-radius: 40px;
 }
 
 .WelcomePage-title{
 color: black;
+font-size: 2rem;
 }
 
 .WelcomePage-subtitle{
@@ -59,10 +60,11 @@ color: black;
 }
 
 .WelcomePage-link {
+    font-weight: 600;
     font-size: 1.5rem;
     color: white;
     padding: 20px;
-    background: linear-gradient(135deg, #3bdae3, #c8f2f4);
+    background: linear-gradient(135deg, #3bdae3, #8ed0d3);
     border-radius: 2.5rem;
     width: 120px;
     height: 60px;
