--- a/front-tourist-activities/src/css/index.css
+++ b/front-tourist-activities/src/css/index.css
@@ -9,7 +9,8 @@
 
   --btn-padding: 0.75rem 1rem;
   --btn-radius:18px;
-  --btn-bg-primary:#5c6ab4;
+
+  --btn-bg-color: linear-gradient(135deg, #4fd1c5, #38b2ac);
   --btn-text-light:#fff;
 
   --color-act-pronto: #f1ef86;
