--- a/front-tourist-activities/src/css/pages/home.css
+++ b/front-tourist-activities/src/css/pages/home.css
@@ -152,7 +152,7 @@ transition: background-color 0.5s ease-in-out;
 }
 
 .Activity-link:hover{
-    background-color: #0099a1;
+    background-color: #7bd7dc;
 }
 
 .Act-card {
